# Linux-Administration-Project

./: README.md
Part1/1/: questions answered.txt
Part1/2/: questions answered.txt
Part2/CMake/Project_required_files/: CMakeLists.txt
Part2/CMake/Project_required_files/Application/: CMakeLists.txt  output
Part2/CMake/Project_required_files/Modules/: CMakeLists.txt
Part2/Makefile/Project_required_files/Application/: Makefile  output
